--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
-title: Joe Shenouda Github | awesome-cyber-skills
+title: Joe Shenouda Github | proxy-scraper
 description: This is a simple proxy scraper script that fetches proxies from various sources and saves them to a file named "proxies.txt". After the script finishes running, it displays a message to the user indicating that the file has been created.
